# rust_api_crud

./: .env  Cargo.toml  README.md  cargo.toml
src/: main.rs
